fixes more or less, gap version

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -1,4 +1,5 @@
 .card {
+  box-sizing: border-box;
   border: 1px solid $ColorAlmostWhite;
   border-radius: 5px;
 
@@ -9,11 +10,17 @@
   justify-content: center;
 
   width: 200px;
-  margin-bottom: 48px;
-  margin-right: $CardMarginRight;
 
-  &:nth-child(4n) {
-    margin-right: 0;
+  &__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    //   padding-bottom: 48px;
+    //  margin-right: 37px;
+    &:nth-child(4n) {
+      margin-right: 0;
+    }
   }
 
   &__photo {
