--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,17 +1,10 @@
 @import "./utils/_normalize";
 @import "./utils/_variables";
+@import "./cardContainer";
 @import "./header";
 @import "./nav";
 @import "./blocks/stars";
 @import "./card";
-
-.cardContainer {
-  display: flex;
-  flex-wrap: wrap;
-  width: 950px;
-  margin: 0 auto;
-  padding: 48px 0;
-}
 
 .header {
   display: flex;
