--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,4 +1,5 @@
 .nav {
+  align-self: flex-end;
   &__list {
     display: flex;
     justify-content: space-between;
@@ -33,11 +34,12 @@
     font-family: "Roboto", Arial, sans-serif;
     font-weight: 500;
     font-size: 12px;
+    // margin nie może być tu, bo całe menu zjeżdża na dół
 
     &::after {
       content: "";
-      width: inherit;
       height: 0;
+      // border nie mogę stąd wyrzucić, bo linki są nierówne
       border: 2px solid transparent;
       border-radius: 4px;
       margin-top: 19px;
@@ -46,9 +48,5 @@
     &.is-active {
       color: $ColorLightBlue;
     }
-  }
-
-  &:hover {
-    align-self: flex-end;
   }
 }
